--- a/src/app/search-control/search-control.component.html
+++ b/src/app/search-control/search-control.component.html
@@ -6,6 +6,8 @@
         (ngSubmit)="onSubmit(searchform)"
         name="loginform"
       >
+        <!-- <ng-autocomplete></ng-autocomplete> -->
+
         <div class="form-group">
           <select
             name="sel"
