Flere modeller mm

--- a/src/app/NgAutocomplete/ng-autocomplete/ng-autocomplete.component.html
+++ b/src/app/NgAutocomplete/ng-autocomplete/ng-autocomplete.component.html
@@ -1,29 +1,19 @@
-<form [formGroup]="ngformReactiv" class="example-form">
-  <div class="ng-autocomplete">
-    <ng-autocomplete
-      formControlName="ngAutocompleteInput"
-      [data]="optionArray"
-      [searchKeyword]="keyword"
-      placeholder="Select "
-      (selected)="selectEvent($event)"
-      (inputChanged)="onChangeSearch($event)"
-      (inputFocused)="onFocused($event)"
-      [itemTemplate]="itemTemplate"
-      [notFoundTemplate]="notFoundTemplate"
-    >
-    </ng-autocomplete>
-
-    <ng-template #itemTemplate let-item>
-      <a [innerHTML]="item.name"></a>
-    </ng-template>
-
-    <ng-template #notFoundTemplate let-notFound>
-      <div [innerHTML]="notFound"></div>
-    </ng-template>
-  </div>
-  @if(autocompleteIsInvalid){
-  <p>Vælg noget!</p>
-  } @for (option of optionArray ; track option.id) {
-  <p>{{ option.DisplayTekst }}</p>
-  }
+<form [formGroup]="formReactiv">
+  <input
+    formControlName="myControl"
+    id="autocompleteValue"
+    name="autocompleteValue"
+    input-select-all
+    type="text"
+    placeholder="{{ autocompleteLabel }}"
+    aria-label="Number"
+    matInput
+    [matAutocomplete]="auto"
+    class="example-form"
+  />
+  <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+      {{ option }}
+    </mat-option>
+  </mat-autocomplete>
 </form>
